--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,299 @@
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Designing starting page */
+
+.first-page {
+  background-image: url("./images/start-image1.jpg");
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+  background-color: #795f5f; /* Used if the image is unavailable */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.first-heading {
+  color: #0c79d1;
+  font-weight: bold;
+  font-size: 80px;
+  font-family: "Audiowide", cursive;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bulb-icon {
+  position: relative;
+  font-size: 70px;
+  font-weight: bold;
+  padding-left: 6px;
+}
+
+.sub-title {
+  font-size: 40px;
+  font-weight: 1000;
+  padding-top: 20px;
+  letter-spacing: 1px;
+  font-family: "Audiowide", cursive;
+}
+
+.start-game {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  min-height: 70vh;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+.btn-start {
+  border-bottom: 4px solid #3b1313;
+  border-radius: 50px;
+  padding: 20px 30px;
+  font-size: 25px;
+  text-decoration: none;
+  display: inline-block;
+  letter-spacing: 1px;
+  background-color: #08599b;
+  transition: 0.5s;
+  font-weight: 700;
+  height: 80px;
+  width: 200px;
+  color: #fff;
+}
+
+.btn-start:hover {
+  color: #faff00;
+}
+
+.test-page {
+  display: flex;
+  flex-direction: column;
+  min-height: 40vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn-test {
+  border-bottom: 4px solid #3b1313;
+  border-radius: 50px;
+  padding: 10px 30px;
+  font-size: 20px;
+  text-decoration: none;
+  display: inline-block;
+  letter-spacing: 1px;
+  background-color: #08599b;
+  transition: 0.5s;
+  font-weight: bold;
+  color: #fff;
+}
+
+.btn-test:hover {
+  color: #faff00;
+}
+
+.memory-test {
+  background-color: #d4ac0d;
+  padding: 40px;
+  font-size: auto;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-body {
+  margin-left: 30px !important;
+  padding: 30px;
+}
+
+.card-title {
+  font-size: 30px;
+}
+
+.count-question {
+  font-size: 20px;
+}
+
+.num {
+  color: #5bdd10;
+  font-weight: bold;
+}
+
+.button {
+  text-decoration: none;
+  border: 2px solid #066cb1;
+  border-radius: 10px 12px;
+  padding: 10px 30px;
+  font-size: 20px;
+  background-color: #043518;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.button:hover {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* User Input */
+
+.user-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: 80vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.user-input {
+  width: 50%;
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  margin: 20px 0;
+  text-align: center;
+}
+
+.user-btn {
+  background: #436b02;
+  color: #fff;
+  border: 2px solid #b0ddc2;
+  outline: none;
+  padding: 0 20px;
+  border-radius: 6px 10px 12px 10px;
+  line-height: 20px;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-size: 30px;
+  width: 30%;
+  height: 10%;
+}
+
+/* Designing answer cards */
+
+.card-container {
+  background: red;
+}
+
+.card {
+  padding: 20px;
+  color: rgb(18, 19, 18);
+  font-weight: bold;
+  font-size: 30px;
+  width: 50%;
+  height: 100%;
+  border-radius: 30%;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+#card-hint {
+  padding: 20px;
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
+  color: rgb(18, 19, 18);
+  font-weight: bold;
+  font-size: 40px;
+  width: 50%;
+  height: 300px;
+  border-radius: 2%;
+  box-shadow: 0px 13px 10px -6px rgb(29, 6, 6);
+  background: rgb(210, 216, 208);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 50vh;
+}
+
+.answer-text {
+  padding: 20px;
+  color: rgb(18, 19, 18);
+  font-weight: bold;
+  font-size: 30px;
+  width: 50%;
+  height: 100%;
+  border-radius: 30%;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  background: rgb(0, 255, 21);
+  transition: transform 2s ease-in-out;
+}
+
+.answer-text:hover {
+  transform: rotateY(360deg);
+}
+
+button {
+  background: rgb(172, 120, 8);
+  border-radius: 100px;
+}
+
+.final-score {
+  padding: 20px;
+  color: rgb(25, 27, 25);
+  font-weight: bold;
+  font-size: 30px;
+  width: 100%;
+  height: 400px;
+  border-radius: 2%;
+  box-shadow: 0px 13px 10px -6px rgb(27, 29, 6);
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 20vh;
+  padding: 20px;
+  transition: transform 2s ease-in-out;
+  animation: text1 2s 1;
+}
+
+@keyframes text1 {
+  0% {
+    letter-spacing: 5px;
+    transform: rotateY(180deg);
+    transform: rotateX(180deg);
   }
-  to {
-    transform: rotate(360deg);
+
+  30% {
+    letter-spacing: 3px;
+    transform: rotateY(270deg);
   }
+
+  85% {
+    transform: rotateY(360deg);
+  }
+}
+
+.reset-icon {
+  position: relative;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.reset-btn {
+  border-radius: 50px;
+  padding: 2px 10px;
+  font-size: 15px;
+  text-decoration: none;
+  display: inline-block;
+  letter-spacing: 1px;
+  background-color: #5653e7;
+  transition: 0.5s;
+  font-weight: bold;
+  color: #fff;
+  margin-top: 10px;
+}
+
+.competence-btn {
+  border-radius: 8px 10px 8px 10px;
+  padding: 2px 10px;
+  font-size: 20px;
+  text-decoration: none;
+  display: inline-block;
+  letter-spacing: 1px;
+  background-color: #5653e7;
+  transition: 0.5s;
+  font-weight: bold;
+  color: #fff;
+  margin-top: 10px;
 }
